# community-canteen

./: .gitignore  README.md
MySQL/: ConnectionPool.cpp  ConnectionPool.h  Database.cpp  Database.h  DatabaseInit.sql  community_canteen.sql  test  test.cpp
README/: linux_基础命令手册（markdown_版）.md
backend/: CMakeLists.txt  main.cpp
backend/api/: api.js  request.js
backend/controller/: CanteenAdminMenu.cpp  CanteenAdminMenu.h  DinerMenu.cpp  DinerMenu.h  MenuRouter.cpp  MenuRouter.h  controller.cpp  controller.h  response.h
backend/dao/: dao.cpp  dao.h
backend/model/: Dish.h  Order.h  OrderItem.h  Role.h  User.h  domain.h  dto.h  model.h  vo.h
backend/service/: DishService.cpp  DishService.h  OrderService.cpp  OrderService.h  UserService.cpp  UserService.h  service.cpp  service.h
backend/test/: test_app  test_database.cpp
backend/tools/: CMakeLists.txt  password_migration.cpp
backend/utils/: PasswordUtil.cpp  PasswordUtil.h
canteen-frontend/src/: App.vue  main.js
canteen-frontend/src/layout/: layout.vue
canteen-frontend/src/router/: index.js
canteen-frontend/src/views/: CanteenList.vue  DishManage.vue  Home.vue  Login.vue  Menu.vue  MenuManage.vue  Orders.vue  Register.vue  UserCenter.vue  menuManage.vue
canteen-frontend/src/views/admin/: AdminApply.vue  AdminManage.vue  Announcement.vue  CanteenManage.vue  DinerManage.vue  DiseaseManage.vue  ManagerApply.vue  ReportManage.vue
canteen-frontend/src/views/common/: Home.vue  Login.vue  Register.vue  UserCenter.vue
canteen-frontend/src/views/diner/: Menu.vue  (+5 more)
thread/: ThreadPool.cpp  ThreadPool.h
(+8 files in other folders)
